2008-10-29  Sam Steingold  <sds@gnu.org>

	* configure: replace "grep -e" with "grep" because Solaris 10
	/usr/bin/grep does not support this option even though it is
	standardized by http://www.opengroup.org/susv3/utilities/grep.html
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-10-29  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): avoid a compilation warning;
	use ascii_to_string() instead of asciz_to_string() for simplicity

2008-10-29  Sam Steingold  <sds@gnu.org>

	fix --with-threads compilation on platforms where spinlock_t=xmutex_t
	* xthread.d (SPINLOCK_INIT): define
	* zthread.d (timeout_call_chain_lock): use it

2008-10-29  Sam Steingold  <sds@gnu.org>

	* stream.d (get_open_files_lock, release_open_files_lock): define
	(add_to_open_streams, find_open_file): use them
	(rd_ch_keyboard): avoid a "warning: empty body in an if-statement"

2008-10-29  Sam Steingold  <sds@gnu.org>

	Merge the [threads] branch into the trunk
	* constobj.d, constsym.d, control.d, debug.d, error.d, eval.d,
	* lispbibl.d, makemake.in, package.d, pathname.d, savemem.lisp,
	* spvw.d, spvw_allocate.d, spvw_circ.d, spvw_fault.d, spvw_garcol.d,
	* spvw_gcmark.d, spvw_genera1.d, spvw_global.d, spvw_heap.d,
	* spvw_memfile.d, spvw_sigint.d, spvw_sigpipe.d, spvw_sigterm.d,
	* spvw_typealloc.d, spvw_update.d, stream.d, subr.d, subrkw.d,
	* symbol.d, threads.lisp, time.d, xthread.d, zthread.d: merge
	* spvw_garcol_old.d: the pre-MT garbage collector, enabled by
	NO_MULTITHREAD_GC in lispbibl.d
	* makemake.in (SPVW_INCLUDES): add spvw_garcol_old
	* po/Makefile.devel (DSOURCES): ditto

2008-10-28  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2198109 ]: LOAD-LOGICAL-PATHNAME-TRANSLATIONS
	confuses "many" and "one" when *LOAD-PATHS* is wild
	* init.lisp (search-file): treat wild elements of *LOAD-PATHS*
	just like non-wild ones, i.e., return directories, not their listings

2008-10-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (PROBE-PATHNAME): do NOT modify the argument!
