@@ -1,3 +1,7 @@
+2008-11-02  Sam Steingold  <sds@gnu.org>
+
+	* modules/berkeley-db/bdb.c: fix 4.7 support
+
 2008-10-29  Sam Steingold  <sds@gnu.org>
 
 	* configure: replace "grep -e" with "grep" because Solaris 10
